<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:layout_height="match_parent">

        <EditText
            android:id="@+id/sourceText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hint_type_here"
            android:imeActionLabel="@string/action_translate"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintBottom_toTopOf="@+id/translateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/targetText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hint_translation"
            android:inputType="none"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translateButton" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton
        android:id="@+id/translateButton"
        android:layout_width="@dimen/translate_button_width"
        android:layout_height="@dimen/translate_button_height"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onTranslate"
        android:src="@drawable/ic_translate"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.5"
        app:spinning_bar_color="@color/colorAccent" />

    <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Spinner
            android:id="@+id/sourceLangSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/translateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Spinner
            android:id="@+id/targetLangSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/translateButton"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.5" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sourceSpeach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:alpha="0.9"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSpeechSource"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/sourceText"
            app:layout_constraintEnd_toEndOf="@+id/sourceText"
            app:srcCompat="@drawable/ic_sound" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/targetSpeach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:alpha="0.9"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSpeechTarget"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/targetText"
            app:layout_constraintEnd_toEndOf="@+id/targetText"
            app:srcCompat="@drawable/ic_sound" />

</android.support.constraint.ConstraintLayout>